--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -221,7 +221,8 @@ exec --no-startup-id compton &
 
 
 exec --no-startup-id "i3-msg 'workspace 1; append_layout ~/.config/i3/workspaces/workspace-1.json'"
+exec --no-startup-id "i3-msg 'workspace 9; append_layout ~/.config/i3/workspaces/workspace-9.json'"
 
 exec --no-startup-id google-chrome
-exec --no-startup-id termite --title "termite server" --exec="tmux attach-session -t server"
-exec --no-startup-id termite --title "termite vim" --exec="tmux attach-session -t vim"
+exec --no-startup-id termite --title "termite server" --exec='bash -c "bash --rcfile <(echo '\''source ~/.bashrc; tmux attach-session -t server'\'')"'
+exec --no-startup-id termite --title "termite vim" --exec='bash -c "bash --rcfile <(echo '\''source ~/.bashrc; tmux attach-session -t vim'\'')"'
