--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -108,7 +108,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # don't remove DISPLAY variable
-set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+#set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # Enable native Mac OS X copy/paste
 #set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
