--- a/dotfiles/.config/compton.conf
+++ b/dotfiles/.config/compton.conf
@@ -1,11 +1,18 @@
+#pqiv -T 'rbconfig-chrome-tray' -c -c -i google2.png
 backend = "glx";
 vsync = "opengl-swc";
+#vsync = "opengl";
+xrender-sync = true;
+xrender-sync-fence = true;
 
+
+
+# shadow
 shadow = true;
 no-dock-shadow = true;
 no-dnd-shadow = true;
 clear-shadow = true;
-
+shadow-ignore-shaped = true;
 shadow-radius = 10;
 shadow-offset-x = -5;
 shadow-offset-y = 0;
@@ -18,53 +25,89 @@ shadow-exclude = [
   "_GTK_FRAME_EXTENTS@:c",
   "class_g = 'i3-frame'",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "name = 'rbconfig-chrome-tray'",
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_STICKY'",
   "!I3_FLOATING_WINDOW@:c"
 ];
-shadow-ignore-shaped = true;
+#shadow-opacity = 0.4;
+#shadow-radius = 2;
+#shadow-offset-x = -4;
+#shadow-offset-y = -4;
+#shadow-exclude = [
+#    "! name~=''",
+#    "name = 'Notification'",
+#    "name *= 'Chrome'",
+#    "name *= 'Firefox'",
+#    "class_g = 'Conky'",
+#    "_NET_WM_NAME@:s = 'rofi'"
+#];
 
-alpha-step = 0.06;
+
+# bluring
 #blur-background = false;
 #blur-background-fixed = true;
+#blur-background-frame = true;
 blur-kern = "3x3box";
 blur-background-exclude = [
   "class_g = 'i3-frame'",
   "window_type = 'dock'",
   "window_type = 'desktop'",
+  "name = 'rbconfig-chrome-tray'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
+
+# Opacity
+#inactive-opacity = 0.8;
+#inactive-opacity-override = false;
+#active-opacity = 0.8;
+#frame-opacity = 0.7;
+#menu-opacity = 0.8;
+alpha-step = 0.06;
+
 
 # Duplicating the _NET_WM_STATE entries because compton cannot deal with atom arrays :-/
 opacity-rule = [
   "97:class_g = 'Termite' && !_NET_WM_STATE@:32a",
 
-  "0:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_HIDDEN'",
-  "0:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_HIDDEN'",
-
-  "90:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_STICKY'",
-  "90:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_STICKY'",
-  "90:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_STICKY'",
-  "90:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_STICKY'",
-  "90:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_STICKY'"
+#  "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'"
+#  "0:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_HIDDEN'"
+#   #"80:class_g = 'i3bar' && window_type = 'dock'"
+#  "0:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_HIDDEN'",
+#  "0:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_HIDDEN'",
+#
+#  "90:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_STICKY'",
+#  "90:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_STICKY'",
+#  "90:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_STICKY'",
+#  "90:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_STICKY'",
+#  "90:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_STICKY'"
 ];
 
-fading = false;
-fade-delta = 7;
-fade-in-step = 0.05;
-fade-out-step = 0.05;
+fading = true;
+fade-delta = 10;
+fade-in-step = 0.10;
+fade-out-step = 0.10;
+#no-fading-openclose = false;
+#no-fading-destroyed-argb = true;
 fade-exclude = [
-    "n:w:*Chromium*"
+    "name = 'rbconfig-chrome-tray'"
 ];
 
 inactive-dim = 0.3;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
+#inactive-dim-fixed = true;
+#active-dim?
+
+
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
+focus-exclude = [
+    "class_g = 'Google-chrome'",
+    "name = 'rbconfig-chrome-tray'"
+#     "_NET_WM_NAME@:s = 'rofi'"
+];
+
 use-ewmh-active-win = true;
-detect-rounded-corners = true;
-detect-client-opacity = true;
 refresh-rate = 0;
 dbe = false;
 paint-on-overlay = true;
@@ -73,9 +116,8 @@ glx-copy-from-front = false;
 glx-swap-method = "undefined";
 sw-opti = true;
 unredir-if-possible = false;
-focus-exclude = [
-    "n:w:*Chromium*"
-];
+detect-rounded-corners = true;
+detect-client-opacity = true;
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [];
