--- a/dotfiles/.config/termite/config
+++ b/dotfiles/.config/termite/config
@@ -3,7 +3,8 @@
 #audible_bell = false
 #clickable_url = true
 #dynamic_title = true
-#font = Monospace 14
+font = Monospace 12
+#font = Font Awesome 14
 #font = DroidSansMono Nerd Font Mono 14
 #font = DejaVuSansMono Nerd Font Mono 14
 #font = Cousine NF 14
