--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -88,20 +88,21 @@ bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selecti
 set-window-option -g display-panes-time 1500
 
 # Status Bar
+# Status Bar solarized-dark (default)
 set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg magenta
 set-option -g status-fg default
-
-# Status Bar solarized-dark (default)
 set-option -g status-bg black
+set-window-option -g window-status-current-fg magenta
+
+set-option -g pane-active-border-bg default
 set-option -g pane-active-border-fg yellow
 set-option -g pane-border-fg cyan
-
 # Status Bar solarized-light
 if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
 if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
 if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
+
 
 # Set window notifications
 setw -g monitor-activity on
