--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -117,6 +117,9 @@ set -g visual-activity on
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
 
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 # Plugins
 
 set -g @plugin 'tmux-plugins/tpm'
