--- a/dotfiles/.config/compton.conf
+++ b/dotfiles/.config/compton.conf
@@ -44,7 +44,7 @@ shadow-exclude = [
 
 
 # bluring
-#blur-background = false;
+blur-background = true;
 #blur-background-fixed = true;
 #blur-background-frame = true;
 blur-kern = "3x3box";
