--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,12 @@
 [submodule "subrepos/i3-volume"]
 	path = subrepos/i3-volume
 	url = https://github.com/hastinbe/i3-volume.git
+[submodule "subrepos/zsh-syntax-highlighting"]
+	path = subrepos/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "subrepos/zsh-autosuggestions"]
+	path = subrepos/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule "subrepos/powerlevel9k"]
+	path = subrepos/powerlevel9k
+	url = https://github.com/bhilburn/powerlevel9k.git
