--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -135,4 +135,4 @@ set -g @resurrect-strategy-vim 'session'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+#run -b '~/.tmux/plugins/tpm/tpm'
