--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -88,20 +88,19 @@ bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -in -selecti
 set-window-option -g display-panes-time 1500
 
 # Status Bar
-# Status Bar solarized-dark (default)
 set-option -g status-left ''
 set-option -g status-right '%l:%M%p'
-set-option -g status-fg default
-set-option -g status-bg black
-set-window-option -g window-status-current-fg magenta
 
-set-option -g pane-active-border-bg default
-set-option -g pane-active-border-fg yellow
-set-option -g pane-border-fg cyan
+# Status Bar solarized-dark (default)
+set-option -g status-style fg=default,bg=black
+set-window-option -g window-status-current-style fg=magenta
+set-option -g pane-active-border-style fg=yellow,bg=default
+set-option -g pane-border-style fg=cyan
+
 # Status Bar solarized-light
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-style bg=white"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-style bg=white"
+if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-style bg=white"
 
 
 # Set window notifications
@@ -117,6 +116,7 @@ set -g visual-activity on
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
 
+# swap two windows
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
