--- a/components/i3/stow/rbowden/.config/i3/conf.d/i3.base.conf
+++ b/components/i3/stow/rbowden/.config/i3/conf.d/i3.base.conf
@@ -38,7 +38,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 # Start i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -p ''"
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="rofi -dmenu -i -p '' -config /home/rbowden/.config/rofi/rofi-spotlight/rofi.rasi"
 #bindsym $mod+Shift+d exec --no-startup-id bash -c 'locate -d/home/rbowden/.config/rofi/rofi_db -e -i --regex "/home/$USER/[^\.]+" | rofi -dmenu -i | xargs -r -0 xdg-open'
 bindsym $mod+Shift+d exec --no-startup-id bash -c 'rofi -modi "Global Search":"~/.config/rofi/rofi-spotlight/rofi-spotlight.sh" -show "Global Search" -config /home/rbowden/.config/rofi/rofi-spotlight/rofi.rasi'
 
