--- a/components/i3/stow/rbowden/.config/i3/conf.d/i3.windows.conf
+++ b/components/i3/stow/rbowden/.config/i3/conf.d/i3.windows.conf
@@ -1,9 +1,18 @@
+for_window [window_role="About"] floating enable
 # TODO: workspace name daemon: https://pypi.org/project/i3-workspace-names-daemon/ ?
-#
+
+# https://erikdubois.be/two-different-ways-make-screenshot-i3/
+bindsym Print exec scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f ~/Pictures/'
+bindsym Control+Print exec gnome-screenshot -i
+
 # horizontal split
-bindsym $mod+Alt+percent split h
+# bindsym $mod+m split h, layout stacking
+# bindsym $mod+n split h, layout tabbed
+bindsym $mod+m split h
+bindsym $mod+n split v
+# bindsym $mod+Alt+percent split h
 # vertical split
-bindsym $mod+Alt+quotedbl split v
+# bindsym $mod+Alt+quotedbl split v
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -90,3 +99,7 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
+
+# Moving workspaces between screens
+# bindsym $mod+p move workspace to output right
+
