--- a/components/i3/stow/rbowden/.config/i3/conf.d/local_config/slink/i3.slink.conf
+++ b/components/i3/stow/rbowden/.config/i3/conf.d/local_config/slink/i3.slink.conf
@@ -13,50 +13,54 @@ floating_maximum_size 1862x2024
 bindsym $mod+t exec --no-startup-id compton-trans 0 -s
 focus_on_window_activation focus
 exec --no-startup-id deadd-notification-center
-#kill -s USR1 $(pidof deadd-notification-center)
+exec --no-startup-id stalonetray -c ~/.config/stalonetrayrc
+bindsym $mod+F1 exec --no-startup-id kill -s USR1 $(pidof deadd-notification-center)
 
 # Terminal
-exec --no-startup-id i3-msg 'workspace number 1'
-exec --no-startup-id termite --title "qls"
-exec --no-startup-id termite --title "termite"
-exec --no-startup-id i3-msg 'rename workspace 1 to "1:"'
+exec --no-startup-id i3-msg 'workspace number 1; append_layout ~/.config/i3/workspaces/terminal.json; rename workspace 1 to "1:"'
+exec --no-startup-id termite --title "termite1"
+exec --no-startup-id termite --title "termite2"
+exec --no-startup-id termite --title "termite floating"
 
 # Chrome
-exec --no-startup-id i3-msg 'workspace number 2; append_layout ~/.config/i3/workspaces/chrome.json'
-exec --no-startup-id google-chrome
-exec --no-startup-id i3-msg 'rename workspace 2 to "2:"'
-
-
-
+exec --no-startup-id i3-msg 'workspace number 2; append_layout ~/.config/i3/workspaces/chrome.json; rename workspace 2 to "2:"'
 
 # Slack and Discord
-exec --no-startup-id i3-msg 'workspace number 3; append_layout ~/.config/i3/workspaces/slack_discord.json'
+exec --no-startup-id i3-msg 'workspace number 3; append_layout ~/.config/i3/workspaces/slack_discord.json; rename workspace 3 to "3:"'
+#for_window [class="^discord$"] move to workspace number 3
+# hangouts
+for_window [class="Google-chrome" instance="crx_nckgahadagoaajjgafhacjanaoiihapd"] move to workspace number 3
+for_window [class="Google-chrome" instance="crx_nckgahadagoaajjgafhacjanaoiihapd"] floating disable
 exec --no-startup-id slack
-exec --no-startup-id discord
-for_window [class="^discord$"] move to workspace number 3
-exec --no-startup-id i3-msg 'rename workspace 3 to "3:"'
-
+#exec --no-startup-id discord
 
 # Notes
-exec --no-startup-id termite --title "notes" --exec="vim --servername=notes notes.txt"
+exec --no-startup-id i3-msg 'workspace number 4; append_layout ~/.config/i3/workspaces/clickup.json; rename workspace 4 to "4:"'
 # TODO: only if not already open?
+for_window [class="Google-chrome" instance="app.clickup.com"] move to workspace number 4
+for_window [class="Google-chrome" instance="app.clickup.com"] floating disable
+# tabs outliner
+for_window [class="Google-chrome" instance="crx_eggkanocgddhmamlbiijnphhppkpkmkl"] move to workspace number 4
+for_window [class="Google-chrome" instance="crx_eggkanocgddhmamlbiijnphhppkpkmkl"] floating disable
 exec --no-startup-id google-chrome --new-window --app=https://app.clickup.com/
-assign [class="Google-chrome" instance="app.click.com"] workspace number 4
+exec --no-startup-id termite --title "Termite Notes" --exec="vim --servername=notes notes.txt"
 
 # Spotify
-exec --no-startup-id spotify
-for_window [class="^(?i)spotify$"] move to workspace number 5
-exec --no-startup-id i3-msg 'rename workspace 5 to "5:"'
-
+#exec --no-startup-id i3-msg 'workspace number 5; append_layout ~/.config/i3/workspaces/spotify.json; rename workspace 5 to "5:"'
+#exec --no-startup-id i3-msg 'workspace number 5; rename workspace 5 to "5:"'
+#for_window [class="^(?i)spotify$"] move to workspace number 5
+#exec --no-startup-id spotify
 
 # Zoom
-for_window [class="^zoom$"] move to workspace number 7
-exec --no-startup-id i3-msg 'rename workspace 7 to "7:辶"'
+#exec --no-startup-id i3-msg 'rename workspace 7 to "7:辶"'
+#for_window [class="^zoom$"] move to workspace number 7
+#for_window [class="^obs$"] move to workspace number 7
+#exec --no-startup-id zoom
+#exec --no-startup-id obs
 
 # Teamviewer
-exec --no-startup-id i3-msg 'workspace number 9; append_layout ~/.config/i3/workspaces/teamviewer.json'
-exec --no-startup-id teamviewer
-exec --no-startup-id i3-msg 'rename workspace 9 to "9:刺"'
+#exec --no-startup-id i3-msg 'workspace number 9; append_layout ~/.config/i3/workspaces/teamviewer.json; rename workspace 9 to "9:刺"'
+#exec --no-startup-id teamviewer
 
 # Tmux Terminal
 #exec --no-startup-id termite --title "termite server" --exec='bash -c "bash --rcfile <(echo '\''source ~/.bashrc; tmux attach-session -t server'\'')"'
@@ -64,7 +68,7 @@ exec --no-startup-id i3-msg 'rename workspace 9 to "9:刺"'
 # Vim+Tmux Terminal
 #exec --no-startup-id termite --title "termite vim" --exec='bash -c "bash --rcfile <(echo '\''source ~/.bashrc; tmux attach-session -t paper'\'')"'
 
+exec --no-startup-id google-chrome
+
 # Start in workspace 1
 exec --no-startup-id i3-msg 'workspace number 1'
-
-exec --no-startup-id stalonetray -c ~/.config/stalonetrayrc
