--- a/components/termite/stow/rbowden/.config/termite/config
+++ b/components/termite/stow/rbowden/.config/termite/config
@@ -54,7 +54,8 @@ foreground = #ffffff
 foreground_bold = #ffffff
 #background = #000000
 # 20% background transparency (requires a compositor)
-background = rgba(0, 0, 0, 0.8)
+background = rgba(0, 0, 0, .8)
+#background = rgba(0x28, 0x28, 0x28, .8)
 
 # If unset, will reverse foreground and background
 highlight = #2f2f2f
@@ -76,3 +77,37 @@ color12 = #94bff3
 color13 = #ec93d3
 color14 = #93e0e3
 color15 = #ffffff
+ 
+#color0 = #000000
+#color1 = #C75646
+#color2 = #8EB33B
+#color3 = #D0B03C
+#color4 = #4E90A7
+#color5 = #C8A0D1
+#color6 = #218693
+#color7 = #B0B0B0
+#color8 = #5D5D5D
+#color9 = #E09690
+#color10 = #CDEE69
+#color11 = #FFE377
+#color12 = #9CD9F0
+#color13 = #FBB1F9
+#color14 = #77DFD8
+#color15 = #F7F7F7
+
+#color0 =  rgba(0x00, 0x00, 0x00, 0)
+#color1 =  rgba(0xC7, 0x56, 0x46, 0)
+#color2 =  rgba(0x8E, 0xB3, 0x3B, 0)
+#color3 =  rgba(0xD0, 0xB0, 0x3C, 0)
+#color4 =  rgba(0x4E, 0x90, 0xA7, 0)
+#color5 =  rgba(0xC8, 0xA0, 0xD1, 0)
+#color6 =  rgba(0x21, 0x86, 0x93, 0)
+#color7 =  rgba(0xB0, 0xB0, 0xB0, 0)
+#color8 =  rgba(0x5D, 0x5D, 0x5D, 0)
+#color9 =  rgba(0xE0, 0x96, 0x90, 0)
+#color10 = rgba(0xCD, 0xEE, 0x69, 0)
+#color11 = rgba(0xFF, 0xE3, 0x77, 0)
+#color12 = rgba(0x9C, 0xD9, 0xF0, 0)
+#color13 = rgba(0xFB, 0xB1, 0xF9, 0)
+#color14 = rgba(0x77, 0xDF, 0xD8, 0)
+#color15 = rgba(0xF7, 0xF7, 0xF7, 0)
