--- a/components/zoom/stow/rbowden/.config/zoomus.conf
+++ b/components/zoom/stow/rbowden/.config/zoomus.conf
@@ -3,12 +3,14 @@ GeoLocale=system
 SensitiveInfoMaskOn=true
 asBarTopMargin=30
 autoPlayGif=false
+autoScale=false
 bForceMaximizeWM=false
 blockUntrustedSSLCert=false
 captureHDCamera=true
 chatListPanelLastWidth=230
-conf.webserver=https://zoom.us
-currentMeetingId=858 0138 9344
+conf.webserver=https://us04web.zoom.us
+conf.webserver.vendor.default=https://zoom.us
+currentMeetingId=
 deviceID=94:E6:F7:74:81:32
 enable.host.auto.grab=true
 enableAlphaBuffer=true
@@ -20,6 +22,7 @@ enableScreenSaveGuard=false
 enableStartMeetingWithRoomSystem=false
 enableTestMode=false
 enableWaylandShare=false
+enablegpucomputeutilization=false
 fake.version=
 flashChatTime=0
 forceEnableTrayIcon=true
@@ -30,12 +33,14 @@ logLevel=info
 newMeetingWithVideo=true
 playSoundForNewMessage=false
 scaleFactor=2
+shareBarTopMargin=0
+speaker_volume=230
 sso_domain=.zoom.us
 sso_gov_domain=.zoomgov.com
 system.audio.type=default
 upcoming_meeting_header_image=
 useSystemTheme=false
-userEmailAddress=
+userEmailAddress=rbowden91@gmail.com
 
 [AS]
 showframewindow=true
@@ -48,6 +53,6 @@ wrapMode=0
 recentlast.session=
 
 [zoom_new_im]
-is_landscape_mode=false
-main_frame_pixel_pos_narrow="306,1016"
-main_frame_pixel_pos_wide="810,680"
+is_landscape_mode=true
+main_frame_pixel_pos_narrow="611,988"
+main_frame_pixel_pos_wide="931,988"
